Update to latest hut-build

--- a/example/example.css
+++ b/example/example.css
@@ -16,9 +16,9 @@ body {
     padding: 0 10px;
 }
 
-.content {
+.container {
     overflow: hidden;
-    max-width: 500px;
+    max-width: 600px;
     margin: 0 auto;
 }
 
