--- a/index.css
+++ b/index.css
@@ -1,18 +1,18 @@
-.accordion-section {
+.hut-accordion .accordion-section {
     border: 1px solid #EEE;
     padding: 0 10px;
     margin-bottom: 5px;
 }
 
-.accordion-header {
+.hut-accordion .accordion-header {
     cursor: pointer;
 }
 
-.accordion-content {
+.hut-accordion .accordion-content {
     overflow: hidden;
     height: 0;
 }
 
-.accordion-selected .accordion-content {
+.hut-accordion .accordion-selected .accordion-content {
     height: auto;
 }
