--- a/example/example.css
+++ b/example/example.css
@@ -1,25 +1,9 @@
 @import "../";
 
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-
-    overflow: auto;
-    padding: 0 10px;
-}
-
 .container {
-    overflow: hidden;
-    max-width: 600px;
     margin: 0 auto;
+    padding-bottom: 10px;
+    max-width: 600px;
 }
 
 #my-accordion {
