--- a/example.css
+++ b/example.css
@@ -222,8 +222,9 @@ button:active {
 
 .container {
   margin: 0 auto;
-  padding-bottom: 10px;
+  padding: 0 10px 10px 10px;
   max-width: 600px;
+  overflow: hidden;
 }
 
 #my-accordion {
