--- a/example/example.css
+++ b/example/example.css
@@ -2,8 +2,9 @@
 
 .container {
     margin: 0 auto;
-    padding-bottom: 10px;
+    padding: 0 10px 10px 10px;
     max-width: 600px;
+    overflow: hidden;
 }
 
 #my-accordion {
