--- a/example.css
+++ b/example.css
@@ -26,6 +26,7 @@
   var-button-color-default: #0093B8;
   var-button-color-hover: #0FC3F0;
   var-button-color-active: #007A99;
+  var-button-color-disabled: #9FA3A5;
   var-button-transition-time: 0.3s;
 }
 
@@ -39,20 +40,20 @@
   box-sizing: border-box;
 }
 
-/* Root and body element fill whole window and have no margin */
-
 html,
 body {
-  width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
 }
 
-/* Enable scroll on body element */
+html {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
 
 body {
-  overflow: auto;
+  overflow: hidden;
 }
 
 /* Element definitions for HTML5 elements, taken from normalize.css */
@@ -149,12 +150,18 @@ button {
   transition: background-color 0.3s;
 }
 
-button:hover {
+button:hover,
+button.hover {
   background-color: #0FC3F0;
 }
 
-button:active {
+button:active,
+button.active {
   background-color: #007A99;
+}
+
+button:disabled {
+  background-color: #9FA3A5;
 }
 
 :root {
@@ -220,11 +227,10 @@ button:active {
   transition-delay: 0.2s, 0.2s;
 }
 
-.container {
+body {
+  max-width: 600px;
   margin: 0 auto;
   padding: 0 10px 10px 10px;
-  max-width: 600px;
-  overflow: hidden;
 }
 
 #my-accordion {
